# heimdall

./: .coverage  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  AUTOMATION.md  CHANGELOG.md  CLAUDE.md  QUICKSTART.md  README.md  checkpoint_prs_1752078308.json  checkpoint_prs_1752078527.json  coverage.xml  justfile  justfile.backup  main.py  prd_input.txt  pyproject.toml  pytest.ini  repos.json  requirements.txt
.cache/: README.md
.claude/: README.md  settings.local.json
.claude/agents/: git-commit-expert.md  graphite-expert.md  gt-restack-expert.md  pr-generator-expert.md  pr-review-expert.md
.history/: .gitignore_20250709075637  .gitignore_20250709075650  .gitignore_20250709075720
.taskmaster/: state.json
config/: ai_developers.json  developer_names.json  schedule.conf.example
docs/: INDEX.md  ai-detection-methodology.md  cache-implementation-fixes.md  chart-validation-report-2025-10-22-FIXED.md  charts-timezone-handling.md  configuration-reference.md  configuration.md  github-actions-bot-summary.md  github-workflows-setup.md  graphite-workflow.md  hermod-installation.md  justfile-implementation.md  justfile-usage.md  linear-integration-summary.md  linear-integration.md  setup-guide.md  usage-guide.md  validation-procedures.md
scripts/: circuit_breaker_monitor.py  collect_ai_usage.py  extract_all_prs_api.py  extract_linear_cycles.py  generate_ai_usage_charts.py  generate_metrics_charts.py  github_action_analyzer.py  ingest_ai_usage.py  log_analyzer.py  restore-mcp-servers.py  rollout_manager.py  run_load_tests.py  schedule_analysis.sh  test_analysis_integration.py  test_commits_extraction.py  test_config.py  test_extraction.sh  test_github_action_analyzer.py  test_linear_extraction.py  test_linear_integration.py  test_prs_extraction.py  verify_apis.py
tests/: README.md  conftest.py  test_analysis_engine.py  test_analysis_integration.py  test_cache_utilities.py  test_claude_client_integration.py  test_developer_metrics.py  test_extraction_caching.py  test_justfile_cache_commands.py  test_load_performance.py  test_rate_limiter.py  test_unified_processor.py
(+161 files in other folders)
