[project]
name = "heimdall"
version = "0.1.0"
description = "Engineering Impact Framework - Heimdall observes developer productivity and engineering metrics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "urllib3>=2.0.0",
    "certifi>=2024.0.0",
    "charset-normalizer>=3.0.0",
    "idna>=3.0",
    "httpx>=0.27.0",
    "httpcore>=1.0.0",
    "h11>=0.14.0",
    "anyio>=4.0.0",
    "sniffio>=1.3.0",
    "distro>=1.9.0",
    "pydantic>=2.0.0",
    "pydantic-core>=2.0.0",
    "pydantic-settings>=2.10.1",
    "typing-extensions>=4.0.0",
    "annotated-types>=0.6.0",
    "jiter>=0.7.0",
    "typing-inspect>=0.9.0",
    "psutil>=5.9.0",
    "cachetools>=5.0.0",
    "cryptography>=41.0.0",
    "bleach>=6.0.0",
    "backoff>=2.2.0",
    "pydantic-settings>=2.10.1",
    "gitpython>=3.1.0",
    "matplotlib>=3.8.0",
    "typer>=0.12.3",
    "rich>=13.7.0",
]

[project.scripts]
hermod = "hermod.cli:app"

[project.optional-dependencies]
hermod = [
    "typer>=0.12.3",
    "rich>=13.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermod"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E712",  # avoid comparison to True/False (allow for pandas)
    "W291",  # trailing whitespace (handled by formatter)
    "W293",  # blank line contains whitespace
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B018"]  # Allow useless expressions in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used in tests
